--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -49,7 +49,7 @@
     </div>
   </div>
   <script src="/socket.io/socket.io.js"></script>
-  <!-- Khởi tạo các biến cần dùng -->
+  <!-- Các biến từ EJS -->
   <script>
     const roomId = "<%= room.id %>";
     const username = document.getElementById("username").value;
