🎖👧 Checkpoint ./views/liveRoom.ejs:37906304/82 ./views/streamer.ejs:37906304/246 ./public/style.css:37906304/10755 ./public/js/liveRoom.js:37906304/46476 ./public/css/liveRoom.css:37906304/20948 ./public/css/streamer.css:37906304/17413

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -48,6 +48,7 @@
     </button>
   </div>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <!-- Các biến từ EJS -->
   <script>
     const roomId = "<%= room.id %>";
