--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -49,6 +49,7 @@
     </div>
   </div>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <!-- Các biến từ EJS -->
   <script>
     const roomId = "<%= room.id %>";
