🏬⚓️ Checkpoint ./public/css/liveRoom.css:37906304/281 ./public/js/liveRoom.js:37906304/4 ./public/style.css:37906304/156

--- a/public/css/liveRoom.css
+++ b/public/css/liveRoom.css
@@ -247,7 +247,7 @@ header p {
 
 /* Overlay khi room ended với hiệu ứng zoom out */
 #roomEndedOverlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
